added responsive banner and header

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Lato&family=Manrope&family=Open+Sans:ital,wght@1,500&family=Poppins:wght@400;500&family=Work+Sans:wght@400;500;600;700;800&display=swap');
 body{
     font-family: 'Work Sans', sans-serif;
-    background-color: #fff;
+    
 }
 header{
     max-width: 1140px;
@@ -53,19 +53,62 @@ span{
     color: #08FFF9 #F00044 #000000;
    } */
 .banner{
-    background-image: url(../images/Group14.png);
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: space-around;
-    /* width: 1140px; */
-    margin: 0 auto;
-    gap: 68px;
+ display: flex;
+ justify-content: space-between;
+ height: 400px;
+ background-image: url(../images/Group14.png);
+ background-repeat: no-repeat;
+ gap: 60px;
+ padding: 50px 100px;
 
 }
 .banner-left{
-    /* width: 50%; */
-    /* background-image: url(../images/Group14.png); */
+    width: 50%;
 }
 .banner-right{
-    /* width: 50%; */
+   width: 50%;
+}
+.banner-left h1{
+    background-image: linear-gradient(to bottom,#e893cf,#9376e0);
+    color: transparent;
+    -webkit-background-clip: text;
+    font-size: 3.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+    margin-top: 5px;
+}
+.banner-left h2{
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.fa-solid{
+    color: red;
+    margin-right: 20px;
+    font-size: 1rem;
+    font-weight: 500;
+}
+.fa-user-group{
+    color: white;
+    background-color: black;
+    margin-right: 10px;
+}
+.banner-right img{
+    width: 100%;
+    height: 100%;
+}
+.banner-btn1{
+    background-color: #ff42a5;
+    color: white;
+    border-radius: 40px;
+    padding: 12px 25px;
+    gap: 10px;
+    border: none;
+}
+.banner-btn2{
+    background-color: #4EC5F7;
+    color: white;
+    border-radius: 40px;
+    padding: 12px 25px;
+    border: none;
 }
