--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -7,15 +7,12 @@
 }
 @media screen and (max-width:576px) {
     .nav,
-    .nav-menu{
+    .nav-menu,
+    .online-game-container{
         flex-direction: column;
     }.nav-menu{
-        /* margin-top: 30px; */
+        
         margin-bottom: 15px;
-    }
-    
-    .nav{
-        /* margin-left: 200px; */
     }
     .nav-menu li{
         margin-bottom: 10px;
@@ -25,6 +22,7 @@
     }
     .banner{
         flex-direction: column;
+       
     }
     .banner-left{
         width: 100%;
@@ -34,5 +32,11 @@
     }
     .banner-btn1{
         margin-bottom: 10px;
+    }
+    
+    .card img{
+        width: 100%;
+        height: 100%;
+        
     }
 }
