--- a/styles/style.css
+++ b/styles/style.css
@@ -112,3 +112,30 @@ span{
     padding: 12px 25px;
     border: none;
 }
+.online-section{
+   margin-top: 20px; 
+}
+.online-content{
+    text-align: center;
+    
+}
+.funny{
+    background-image: linear-gradient(to bottom,#e893cf,#9376e0);
+    color: transparent;
+    -webkit-background-clip: text;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.online-game-container{
+    display: flex;
+    justify-content: space-around;
+    /* width: 1140px;
+    margin: 0 auto; */
+    /* margin: 20px 200px 20px 200px; */
+    gap:24px;
+}
+.card img{
+    width: 100%;
+    height: 100%;
+    
+}
