--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -8,7 +8,8 @@
 @media screen and (max-width:576px) {
     .nav,
     .nav-menu,
-    .online-game-container{
+    .online-game-container,
+    .play-container{
         flex-direction: column;
     }.nav-menu{
         
@@ -32,11 +33,17 @@
     }
     .banner-btn1{
         margin-bottom: 10px;
+    }.online-game-container{
+        margin: 0;
+        display: grid;
+        grid-template-columns: 1fr;
     }
     
     .card img{
         width: 100%;
         height: 100%;
         
+    }.play-img1{
+        width: 100%;
     }
 }
