--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -1,15 +1,17 @@
-@media screen and (min-width:576px) and (max-width:992px) {
+@media screen and (min-width:426px) and (max-width:767px) {
     .nav,
     .nav-menu{
         flex-direction: column;
     }
     
 }
-@media screen and (max-width:576px) {
+@media screen and (max-width:426px) {
     .nav,
     .nav-menu,
-    .online-game-container,
-    .play-container{
+    .banner,
+    .online-game-container
+    .play-container
+    {
         flex-direction: column;
     }.nav-menu{
         
@@ -20,13 +22,12 @@
     }
     .btn{
         margin-top: 10px;
+        margin-bottom: 20px;
     }
-    .banner{
-        flex-direction: column;
-       
-    }
+    
     .banner-left{
         width: 100%;
+     
     }
     .banner-right{
        width: 100%;
@@ -38,12 +39,30 @@
         display: grid;
         grid-template-columns: 1fr;
     }
+    .card{
+        margin-bottom: 40px;
+    }
     
     .card img{
         width: 100%;
         height: 100%;
         
-    }.play-img1{
-        width: 100%;
     }
+    .play-img1{
+        width: 50%;
+    }
+    .btn-container{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        
+        padding: 0px;
+    }
+    
+.btn-section{
+    margin-top:200px;
+   
+    width: 100%;
+    margin: 0 auto;
+} 
+    
 }
