--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ span{
     margin-right: 4rem;
 }
 .btn-menu{
-    padding: 10px 30px 10px 10px;
+    padding: 10px 20px 10px 10px;
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
     margin-left: 20px;
@@ -48,21 +48,19 @@ span{
    .fa-youtube{
     color: red;
    }
-   /* .fa-tiktok{
-    background-image: linear-gradient(text-decoration #08FFF9 #F00044 #000000 );
-    color: #08FFF9 #F00044 #000000;
-   } */
+   
 .banner{
  display: flex;
  justify-content: space-between;
- /* height: 400px; */
- background-image: url(../images/Group14.png);
- background-repeat: no-repeat;
+ 
+ 
  gap: 60px;
  padding: 50px 100px;
 
 }
 .banner-left{
+    background-image: url(../images/Group14.png);
+ background-repeat: no-repeat;
     width: 50%;
 }
 .banner-right{
@@ -80,18 +78,22 @@ span{
 .banner-left h2{
     font-size: 2.5rem;
     font-weight: 600;
-    margin-bottom: 10px;
+    
 }
 .fa-solid{
     color: red;
-    margin-right: 20px;
+    
     font-size: 1rem;
     font-weight: 500;
 }
 .fa-user-group{
     color: white;
     background-color: black;
-    margin-right: 10px;
+    
+}
+.btn i{
+    margin-right: 5px;
+    margin-left: 5px;
 }
 .banner-right img{
     width: 100%;
@@ -140,46 +142,95 @@ span{
 /* .play-section{
     width: 1140px;
     margin: 0 auto;
-} */
+}
+
 .play-container{
+    
+    margin-top: 150px;
     display: flex;
-    /* margin-top: 0px 250px 50px; */
-    justify-content: center;
-    align-items: center;
-    gap: 240px;
-    margin: 20px 240px;
-  
+    height: 400px;
+    padding: 0px 100px;
+    
     
 }.play-content{
-   width: 50%;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 200px 50px 0px;
 }
 .play-img{
     width: 50%;
 }
-.play-img .play-img1{
-    height: 100%;
-    width: 100%;
-    
-    position: relative;
-    bottom: -200px;
-    left: 100px;
+.play-img img{
+  width: 100%;
+  height: 100%; 
+  padding: 50px;
+  position: relative;
+  top: -270px;
+
+  
+}
+.play-img2{
+    width: 20px;
+    height: 20px;
+   position: absolute;
+   bottom: 240px;
+   right: 50px;
+   
+   
 }
 .play-img2 img{
-    width: 200px;
-    height: 200px;
-    position: absolute;
+   
+} */
+.btn-section{
+    margin-top:200px;
+    gap: 20px;
+    width: 1140px;
+    margin: 0 auto;
+}
+.btn-container{
+    flex-wrap: wrap;
     
+    padding: 100px;
+   
+}
+button img{
+    height: 20px;
+    width: 20px;
+   
+}
+.btn-container button {
+    
+    margin-right: 20px;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: none;
+    padding: 5px 10px;
+}
+.btn-container button:hover{
+    border: 1px solid #ff42a5;
+    color: #ff42a5;
 }
 
+
+
+
+
+/* footer section style */
 footer{
     margin-top: 300px;
+    margin-bottom: 0px;
     background-color: black;
+    color: white;
+    width: 100%;
+height: 300px
 }
 .footer{
     display: flex;
     justify-content: center;
     gap: 10px;
     align-items: center;
+    margin-bottom: 0px;
 }
 .footer-img{
     width: 4rem;
@@ -194,5 +245,25 @@ footer{
     font-size: 2rem;
 }
 .footer-name{
+   display: grid;
+   grid-template-columns: repeat(6, 1fr);
+}
+.visiable-link{
+    text-align: center;
     color: white;
+}
+.visiable-link a{
+    margin-right: 20px;
+    color: white;
+}
+.footer-title{
+    display: flex;
+    justify-content: center;
+}
+.footer-title p{
+    margin-right: 20px;
+}
+.footer-description p{
+    text-align: center;
+    margin-bottom: 120px;
 }
