--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -1,21 +1,75 @@
-@media screen and (min-width:426px) and (max-width:767px) {
+        /* Responsive for tablet */
+ @media screen and (min-width:426px) and (max-width:769px) {
     .nav,
-    .nav-menu{
+    .nav-menu,
+    .online-game-container,
+    .play-container,
+    .btn-container,
+    .footer,
+    .footer-name,
+    .visiable-link
+    {
         flex-direction: column;
     }
-    
+    .banner{
+        flex-direction: column-reverse;
+        padding: 0px 50px 0px 200px;
+    }
+    .banner-left, .banner-right{
+        width: 100%;
+        text-align: center;
+    }
+    .online-game-container{
+        margin: 20px 60px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .play-img1{
+        width: 100%;
+    }
+
+    .btn-container{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        align-items: center;
+        }
+        footer{
+            align-items: center;
+            height: 100%;
+            margin-top: 20px;
+            padding-top: 30px;
+        }
+        .footer-name{
+            padding: 0px 20px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+        }
+        .visiable-link{
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            color: white;
+            margin: 10px 70px;
+            gap: 20px;
+        }
 }
+          /* Responsive for mobile device */
 @media screen and (max-width:426px) {
     .nav,
     .nav-menu,
-    .banner,
-    .online-game-container
-    .play-container
+    .online-game-container,
+    .play-container,
+    .btn-container,
+    .footer,
+    .footer-name,
+    .visiable-link
     {
         flex-direction: column;
-    }.nav-menu{
-        
-        margin-bottom: 15px;
+    }
+    .banner{
+        flex-direction: column-reverse;
+    }
+    .nav-menu{
+        margin-bottom: 10px;
     }
     .nav-menu li{
         margin-bottom: 10px;
@@ -24,45 +78,67 @@
         margin-top: 10px;
         margin-bottom: 20px;
     }
-    
-    .banner-left{
-        width: 100%;
-     
+    .banner{
+        gap: 20px;
+        padding: 20px;
     }
-    .banner-right{
-       width: 100%;
+    .banner-left, .banner-right{
+        width: 100%;
+        text-align: center;
     }
     .banner-btn1{
         margin-bottom: 10px;
-    }.online-game-container{
-        margin: 0;
+    }
+    .online-game-container{
+        margin: 20px 60px;
         display: grid;
         grid-template-columns: 1fr;
     }
     .card{
         margin-bottom: 40px;
     }
-    
     .card img{
-        width: 100%;
-        height: 100%;
-        
+    width: 100%;
+    height: 100%;  
     }
     .play-img1{
         width: 50%;
     }
-    .btn-container{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        
-        padding: 0px;
+    .play-container{
+        align-items: center;
+        padding: 30px 20px;
     }
-    
-.btn-section{
-    margin-top:200px;
-   
-    width: 100%;
-    margin: 0 auto;
+    .play-img div{
+    bottom: -50px;
+    left: 50%; 
+    }
+    .btn-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    }
+.btn-container button{
+   padding: 5px 25px;
 } 
-    
+footer{
+    align-items: center;
+    height: 100%;
+    margin-top: 20px;
+    padding-top: 30px;
+}
+.footer{
+    align-items: center;
+}
+.footer-name{
+    padding: 0px 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.visiable-link{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    color: white;
+    margin: 10px 70px;
+    gap: 20px;
+} 
 }
