--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -7,9 +7,13 @@
     .btn-container,
     .footer,
     .footer-name,
-    .visiable-link
+    .visible-link
     {
         flex-direction: column;
+    }
+    .nav 
+    {
+        height: 100%;
     }
     .banner{
         flex-direction: column-reverse;
@@ -24,10 +28,15 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-    .play-img1{
+    .play-content{
         width: 100%;
-    }
-
+        margin-bottom: 10px;
+       }
+    .play-img img{
+        height: 100%;
+        width: 100%;
+        margin-top: 5px;
+      }
     .btn-container{
         display: grid;
         grid-template-columns: repeat(3,1fr);
@@ -44,7 +53,7 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
         }
-        .visiable-link{
+        .visible-link{
             display: grid;
             grid-template-columns: repeat(3,1fr);
             color: white;
@@ -61,7 +70,7 @@
     .btn-container,
     .footer,
     .footer-name,
-    .visiable-link
+    .visible-link
     {
         flex-direction: column;
     }
@@ -134,7 +143,7 @@ footer{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
-.visiable-link{
+.visible-link{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     color: white;
