--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -74,6 +74,9 @@
     {
         flex-direction: column;
     }
+    .nav{
+        margin-top: 50px;
+    }
     .banner{
         flex-direction: column-reverse;
     }
@@ -88,6 +91,7 @@
         margin-bottom: 20px;
     }
     .banner{
+        margin-top: 30px;
         gap: 20px;
         padding: 20px;
     }
@@ -109,6 +113,9 @@
     .card img{
     width: 100%;
     height: 100%;  
+    }
+    .card:hover .overlay{
+        opacity: 1;
     }
     .play-img1{
         width: 50%;
