--- a/styles/style.css
+++ b/styles/style.css
@@ -232,8 +232,7 @@ span{
     padding: 100px;
 }
 .btn-container button{
-    justify-content: center;
-    align-items: center;
+    display: flex;
 }
 button img{
     height: 20px;
@@ -244,7 +243,7 @@ button img{
     margin: 20px;
     border-radius: 20px;
     border: none;
-    padding: 5px 10px;
+    padding: 10px 20px;
 }
 .btn-container button:hover{
     border: 1px solid #ff42a5;
