--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Lato&family=Manrope&family=Open+Sans:ital,wght@1,500&family=Poppins:wght@400;500&family=Work+Sans:wght@400;500;600;700;800&display=swap');
 body{
     font-family: 'Work Sans', sans-serif;
-    
 }
 /* navbar style start */
 .nav{
@@ -50,14 +49,13 @@ span{
 
    /* banner style start */
 .banner{
-   
  display: flex;
  justify-content: space-between;
  gap: 60px;
  padding: 0px 0px 50px;
 }
 .banner-left{
-    background-image: url(../images/Group14.png);
+  background-image: url(../images/Group14.png);
   background-repeat: no-repeat;
   width: 50%;
   text-align: center;
@@ -120,6 +118,7 @@ span{
 }
 .online-content{
     text-align: center; 
+    padding-bottom: 10px;
 }
 .funny{
     background-image: linear-gradient(to bottom,#e893cf,#9376e0);
@@ -136,7 +135,6 @@ span{
 .card img{
     width: 100%;
     height: 200px;
-    
 }
 .card{
     position: relative;
@@ -185,6 +183,7 @@ span{
 
 /* play section style start */
 .play-section{
+    background: #FFF;
     margin-top: 100px;
     width: 100%;  
 }
@@ -220,16 +219,17 @@ span{
 
 /* btn style start */
 .btn-section{
-    margin-top:200px;
     width: 100%;
     margin: 0 auto;
 }
 .btn-container{
+    margin-top:200px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     padding: 100px;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
 }
 .btn-container button{
     display: flex;
@@ -254,7 +254,6 @@ button img{
 
 /* footer style start */
 footer{
-    margin-top: 50px;
     margin-bottom: 0px;
     background-color: black;
     color: white;
