--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -40,6 +40,9 @@
         width: 100%;
         margin-bottom: 10px;
        }
+       .play-section{
+        height: 100%;
+       }
     .play-img img{
         height: 100%;
         width: 100%;
@@ -134,9 +137,12 @@
     .play-img1{
         width: 50%;
     }
+    .play-section{
+        height: 100%;
+    }
     .play-container{
         align-items: center;
-        padding: 30px 20px;
+        padding: 30px 0px;
     }
     .play-img div{
     bottom: -50px;
